--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <!--          <span class="text-3xl font-bold text-white">致敬云计算技术有限公司</span>-->
             <!-- 移动端显示简称，桌面端显示全称 -->
             <span class="text-2xl font-bold text-white md:text-xl lg:text-2xl">
-                <span class="md:hidden">致敬科技</span>
+                <span class="md:hidden">致敬云计算技术有限公司</span>
                 <span class="hidden md:inline">致敬云计算技术有限公司</span>
             </span>
         </a>
@@ -296,7 +296,7 @@
         <div class="space-y-6">
           <h2 class="text-[clamp(1.8rem,4vw,2.5rem)] font-bold">关于深圳致敬科技</h2>
           <p class="text-white text-lg">
-              成立于2020年，由准国家级的技术人员创立，参与过中美顶级网络战争，专注于前沿科技与各领域解决方案。
+              成立于2020年，由深耕人工智能、区块链领域的资深技术团队创立，核心成员拥有10年以上科技行业经验，专注于前沿科技与各领域解决方案。
           </p>
           <p class="text-white text-lg">
               我们用科技致敬未来，让前沿技术落地为企业实际价值，为客户提供精简的产品，以“隐私、安全、高效、实用”为核心设计理念。
